tests/baselines/reference/duplicateIdentifierInCatchBlock.errors.txt
==== tests/cases/compiler/duplicateIdentifierInCatchBlock.ts (4 errors) ====
    var v;
    try { } catch (e) {
        function v() { }
                 ~
!!! error TS2300: Duplicate identifier 'v'.
    }
    
    function w() { }
    try { } catch (e) {
        var w;
            ~
!!! error TS2300: Duplicate identifier 'w'.
    }
    
    try { } catch (e) {
        var x;
        function x() { } // error
                 ~
!!! error TS2300: Duplicate identifier 'x'.
        function e() { } // error
        var p: string;
        var p: number; // error
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'p' must be of type 'string', but here has type 'number'.
    }